--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Video Background -->
     <div class="video-background">
         <video autoplay loop muted playsinline class="background-video">
-            <source src="./video/AAAAAA_1/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.mp4" type="video/mp4">
+            <source src="./img/video.mp4" type="video/mp4">
         </video>
     </div>
 
