--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
             <div class="col-lg-8">
                 <!-- Blog Post 1 -->
                 <div class="card mb-4">
-                    <img src="./Blog/blog img/163512_196625108_1793470310832036_5706231097265184267_n.png" class="card-img-top" alt="...">
+                    <img src="./Blog/blog img/khelif-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Bạn trẻ HK15 đi đầu phong trào "nhạc súng"</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
-                        <a href="./Blog/blog index.html" class="btn btn-primary">Read More</a>
+                        <a href="./Blog/TT-khelif.html" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
                 <!-- Blog Post 2 -->
@@ -165,7 +165,7 @@
             </div>
         </div>
     </section>
-
+    
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white-50">
         <div class="container text-center">
@@ -175,5 +175,34 @@
 
     <!-- Bootstrap 5 JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const searchButton = document.querySelector('.btn.btn-primary');
+      const searchInput = document.querySelector('.form-control');
+
+      searchButton.addEventListener('click', () => {
+          const searchTerm = searchInput.value.trim();
+          if (searchTerm) {
+              performSearch(searchTerm);
+          }
+      });
+  });
+
+  function performSearch(searchTerm) {
+      console.log('Searching for:', searchTerm);
+      // Add your search logic here, e.g., filter blog posts or fetch search results from an API
+
+      // For now, let's just show an alert
+      alert(`Search for "${searchTerm}" is not implemented yet!`);
+
+      // Clear the search input
+      searchInput.value = '';
+
+      // Prevent the form from submitting
+      return false;
+  }
+</script>
 </body>
 </html>
