--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
                 <div class="dropdown-menu">
                   <ul>
-                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Thể thao</a></li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
                     <li><a class="dropdown-item" href="#">Title </a></li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
@@ -74,7 +74,7 @@
                   </ul>
                   <ul>
                     <li>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Văn hoá</a>
                     </li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
@@ -83,7 +83,16 @@
                   </ul>
                   <ul>
                     <li>
-                      <a class="dropdown-item" href="#">Another Caterogy</a>
+                      <a class="dropdown-item" href="#">Ẩm Thực</a>
+                    </li>
+                    <li><a class="dropdown-item" href="#">Title</a></li>
+                    <li><a class="dropdown-item" href="#">Title</a></li>
+                    <li><a class="dropdown-item" href="#">Title</a></li>
+                    <li><a class="dropdown-item" href="#">Title</a></li>
+                  </ul>
+                  <ul>
+                    <li>
+                      <a class="dropdown-item" href="#">Công Nghệ</a>
                     </li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
                     <li><a class="dropdown-item" href="#">Title</a></li>
@@ -175,15 +184,15 @@
                         <!-- Slideshow Section -->
             <div class="slideshow-container">
               <div class="slide fade">
-            <img src="image1.jpg" alt="Image 1">
+            <img src="./Blog/blog img/banggia.png" alt="Image 1">
               <div class="caption">Caption 1</div>
             </div>
             <div class="slide fade">
-              <img src="image2.jpg" alt="Image 2">
+              <img src="./Blog/blog img/AnhAI.jpg" alt="Image 2">
               <div class="caption">Caption 2</div>
             </div>
             <div class="slide fade">
-              <img src="image3.jpg" alt="Image 3">
+              <img src="./Blog/blog img/amthuc.jpg" alt="Image 3">
               <div class="caption">Caption 3</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
