--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <h5 class="card-title">Bạn trẻ HK15 đi đầu phong trào "nhạc súng"</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
                         <p class="card-views">Views: <span id="views-post-1">0</span></p>
-                        <a href="./Blog/TT-khelif.html" class="btn btn-primary">Read More</a>
+                        <a href="./Blog/TT-khelif.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
                     </div>
                 </div>
                 <!-- Blog Post 2 -->
@@ -152,7 +152,7 @@
                         <h5 class="card-title">Blog Post Title 2</h5>
                         <p class="card-text">Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.</p>
                         <p class="card-views">Views: <span id="views-post-2">0</span></p>
-                        <a href="#" class="btn btn-primary">Read More</a>
+                        <a href="/Blog/AT-banhtrungthu.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
                     </div>
                 </div>
             </div>
