--- a/index.html
+++ b/index.html
@@ -27,101 +27,64 @@
 
     <!-- Header with Navbar -->
     <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-dark"
-        style="background-color: #fdfeff6e"
-      >
-        <div class="container-fluid">
-          <div class="navbar__logo">
-            <img src="./img/1722658958865.png" alt="logo image" />
-          </div>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Category
-                </a>
-                <div class="dropdown-menu">
-                  <ul>
-                    <li><a class="dropdown-item" href="#">Thể thao</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title </a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <a class="dropdown-item" href="#">Văn hoá</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <a class="dropdown-item" href="#">Ẩm Thực</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                  </ul>
-                  <ul>
-                    <li>
-                      <a class="dropdown-item" href="#">Công Nghệ</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                    <li><a class="dropdown-item" href="#">Title</a></li>
-                  </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #fdfeff6e">
+            <div class="container-fluid">
+                <div class="navbar__logo">
+                    <img src="./img/1722658958865.png" alt="logo image" />
                 </div>
-              </li>
-            </ul>
-            
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-light" type="submit">
-                Search
-              </button>
-              <button class="btn btn-outline-light" type="button">
-                Login
-              </button>
-            </form>
-            </form>
-          </div>
-        </div>
-      </nav>
-      <form class="d-flex" role="search">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
+                            <div class="dropdown-menu">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Thể thao</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Văn hoá</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Ẩm Thực</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Công Nghệ</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                    <li><a class="dropdown-item" href="#">Title</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="btn btn-outline-light" type="submit">Search</button>
+                        <button class="btn btn-outline-light" type="button">Login</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- Banner Section -->
@@ -142,7 +105,7 @@
                         <h5 class="card-title">Bạn trẻ HK15 đi đầu phong trào "nhạc súng"</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
                         <p class="card-views">Views: <span id="views-post-1">0</span></p>
-                        <a href="./Blog/TT-khelif.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
+                        <a href="./Blog/TT-khelif.html" class="btn btn-primary" onclick="incrementViews('views-post-1')">Read More</a>
                     </div>
                 </div>
                 <!-- Blog Post 2 -->
@@ -169,42 +132,38 @@
                     </div>
                 </div>
                 <div class="card mb-4">
-                  <div class="card-body">
-                      <h5 class="card-title">Categories</h5>
-                      <ul class="list-unstyled mb-0">
-                          <li><a href="categories.html#the-thao">Thể thao</a></li>
-                          <li><a href="categories.html#van-hoa">Văn hóa</a></li>
-                          <li><a href="categories.html#cong-nghe">Công Nghệ</a></li>
-                          <li><a href="categories.html#giai-tri">Giải Trí</a></li>
-                      </ul>
-                      
-                  </div>
-              </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Categories</h5>
+                        <ul class="list-unstyled mb-0">
+                            <li><a href="categories.html#the-thao">Thể thao</a></li>
+                            <li><a href="categories.html#van-hoa">Văn hóa</a></li>
+                            <li><a href="categories.html#cong-nghe">Công Nghệ</a></li>
+                            <li><a href="categories.html#giai-tri">Giải Trí</a></li>
                         </ul>
-                        <!-- Slideshow Section -->
-            <div class="slideshow-container">
-              <div class="slide fade">
-            <img src="./Blog/blog img/banggia.png" alt="Image 1">
-              <div class="caption">Caption 1</div>
-            </div>
-            <div class="slide fade">
-              <img src="./Blog/blog img/AnhAI.jpg" alt="Image 2">
-              <div class="caption">Caption 2</div>
-            </div>
-            <div class="slide fade">
-              <img src="./Blog/blog img/amthuc.jpg" alt="Image 3">
-              <div class="caption">Caption 3</div>
-            </div>
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
-          </div>
-
-<script src="script.js"></script>
                     </div>
+                </div>
+
+                <!-- Slideshow Section -->
+                <div class="slideshow-container">
+                    <div class="news active">
+                        <h2>News Title 1</h2>
+                        <p>This is the first news content.</p>
+                    </div>
+                    <div class="news">
+                        <h2>News Title 2</h2>
+                        <p>This is the second news content.</p>
+                    </div>
+                    <div class="news">
+                        <h2>News Title 3</h2>
+                        <p>This is the third news content.</p>
+                    </div>
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white-50">
         <div class="container text-center">
@@ -214,5 +173,7 @@
 
     <!-- Bootstrap 5 JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/main.js"></script>
+
 </body>
 </html>
