--- a/cong-nghe.html
+++ b/cong-nghe.html
@@ -119,46 +119,19 @@
                 <!-- Slideshow Section -->
                 <div class="slideshow-container">
                     <div class="news active">
-                        <h2>Tin Có Thể Bạn Quan Tâm</h2>
-                        <p>            
-                          <div class="card mb-4">
-                          <img src="./Blog/blog img/nhaphatminh.jpg" class="card-img-top" alt="CN2">
-                          <div class="card-body">
-                              <h5 class="card-title">Phát minh được ca ngợi hàng chục năm biến thành thảm họa</h5>
-                              <p class="card-text">Đầu thế kỷ 20, Thomas Midgley Jr. tự mình chứng minh độ an toàn của xăng pha chì và chất làm lạnh CFC, giúp chúng thành công về thương mại.</p>
-                              <p class="card-views">Views: <span id="views-post-2">0</span></p>
-                              <a href="/Blog/CN-nhgphatminh.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
-                          </div>
-                      </div>
-                  </div></p>
+                        <h2></h2>
+                        <p>This is the first news content.</p>
                     </div>
                     <div class="news">
-                        <h2>Tin Có Thể Bạn Quan Tâm</h2>
-                        <p>                
-                          <div class="card mb-4">
-                          <img src="./Blog/blog img/dglm-1.png" class="card-img-top" alt="VV2">
-                          <div class="card-body">
-                              <h5 class="card-title">Con đường 'lãng mạn nhất thế giới' tái mở cửa</h5>
-                              <p class="card-text">Sau 12 năm đóng cửa sửa chữa, con đường lãng mạn nhất thế giới, Via dell'Amore, mở cửa đón khách trở lại...</p>
-                              <p class="card-views">Views: <span id="views-post-2">0</span></p>
-                              <a href="/Blog/DL-condglangman.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
-                          </div>
-                      </div>
-                  </div></p>
-                  <div class="news">
-                    <h2>Tin Có Thể Bạn Quan Tâm</h2>
-                    <p>                
-                      <div class="card mb-4">
-                      <img src="./Blog/blog img/chuaba.jpg" class="card-img-top" alt="VV2">
-                      <div class="card-body">
-                          <h5 class="card-title">Một ngày khám phá núi Bà Đen</h5>
-                          <p class="card-text">Núi Bà Đen sở hữu sáu ngôi chùa từ chân lên lưng chừng núi cùng nhiều hoạt động tâm linh giúp du khách có trải nghiệm trọn vẹn trong một ngày...</p>
-                          <p class="card-views">Views: <span id="views-post-2">0</span></p>
-                          <a href="/Blog/DL-kpnuibaden.html" class="btn btn-primary" onclick="incrementViews('views-post-2')">Read More</a>
-                      </div>
-                  </div>
-              </div></p>
-
+                        <h2>News Title 2</h2>
+                        <p>This is the second news content.</p>
+                    </div>
+                    <div class="news">
+                        <h2>News Title 3</h2>
+                        <p>This is the third news content.</p>
+                    </div>
+                    <button class="prev">&#10094;</button>
+                    <button class="next">&#10095;</button>
                 </div>
             </div>
         </div>
