--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
         </div>
     </section>
-
+    <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Top</button>
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white-50">
         <div class="container text-center">
