--- a/am-thuc.html
+++ b/am-thuc.html
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-
+    <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Top</button>
         <!-- Footer -->
         <footer class="py-4 bg-dark text-white-50">
             <div class="container text-center">
@@ -124,6 +124,8 @@
         </footer>
 
         <!-- Bootstrap 5 JavaScript -->
+        <script src="./js/main.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
     </html>
