--- a/the-thao.html
+++ b/the-thao.html
@@ -124,6 +124,8 @@
     </footer>
 
     <!-- Bootstrap 5 JavaScript -->
+    <script src="./js/main.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
