--- a/am-thuc.html
+++ b/am-thuc.html
@@ -30,16 +30,13 @@
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #fdfeff6e">
                 <div class="container-fluid">
                     <div class="navbar__logo">
-                        <img src="./img/1722658958865.png" alt="logo image" />
+                        <a class="nav-link active" aria-current="page" href="../index.html"> <img src="./img/1722658958865.png"></a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
                                 <div class="dropdown-menu">
