--- a/van-hoa.html
+++ b/van-hoa.html
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #fdfeff6e">
                 <div class="container-fluid">
                     <div class="navbar__logo">
-                        <img src="./img/1722658958865.png" alt="logo image" />
+                        <a class="nav-link active" aria-current="page" href="../index.html"> <img src="./img/1722658958865.png"></a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
