--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li class="nav-item">
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Danh Mục </a>
                             <div class="dropdown-menu">
                               <ul>
                                   <li><a class="dropdown-item" href="the-thao.html">Thể thao</a></li>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Categories</h5>
+                        <h5 class="card-title">Danh Mục </h5>
                         <ul class="list-unstyled mb-0">
                           <li><a href="the-thao.html">Thể thao</a></li>
                           <li><a href="van-hoa.html">Văn hóa</a></li>
