--- a/the-thao.html
+++ b/the-thao.html
@@ -100,7 +100,7 @@
             <div class="col-lg-4">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Categories</h5>
+                        <h5 class="card-title">Danh Mục </h5>
                         <ul class="list-unstyled mb-0">
                             <li><a href="the-thao.html">Thể thao</a></li>
                             <li><a href="van-hoa.html">Văn hóa</a></li>
