--- a/the-thao.html
+++ b/the-thao.html
@@ -78,8 +78,8 @@
                 <div class="card mb-4">
                     <img src="./Blog/blog img/khelif-1.png" class="card-img-top" alt="Thể thao 1">
                     <div class="card-body">
-                        <h5 class="card-title">Sự kiện Thể thao lớn nhất năm</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
+                        <h5 class="card-title">Khelif muốn vô địch Olympic để đáp trả tranh cãi giới tính</h5>
+                        <p class="card-text">  Võ sĩ Algeria Imane Khelif xem việc giành HC vàng quyền Anh hạng 66kg nữ là cách tốt nhất để đáp trả những áp lực vì tranh cãi giới tính nhắm vào cô từ đầu Olympic Paris 2024.</p>
                         <p class="card-views">Views: <span id="views-post-1">0</span></p>
                         <a href="./Blog/TT-khelif.html" class="btn btn-primary" onclick="incrementViews('views-post-1')">Read More</a>
                     </div>
