--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                           </div>
                       </li>
                   </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-light" type="submit">Search</button>
-                        <button class="btn btn-outline-light" type="button">Login</button>
+                    <form class="d-flex" role="Tìm Kiếm">
+                        <input class="form-control me-2" type="Tìm Kiếm" placeholder="Tìm Kiếm" aria-label="Tìm Kiếm" />
+                        <button class="btn btn-outline-light" type="submit">Tìm Kiếm</button>
+                        <button class="btn btn-outline-light" type="button">Đăng nhập</button>
                     </form>
                 </div>
             </div>
@@ -104,10 +104,10 @@
             <div class="col-lg-4">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Search</h5>
+                        <h5 class="card-title">Tìm Kiếm</h5>
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <button class="btn btn-primary" type="button">Go!</button>
+                            <input type="text" class="form-control" placeholder="Tìm Kiếm...">
+                            <button class="btn btn-primary" type="button">Tìm</button>
                         </div>
                     </div>
                 </div>
