--- a/van-hoa.html
+++ b/van-hoa.html
@@ -55,10 +55,10 @@
                                 </div>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                            <button class="btn btn-outline-light" type="submit">Search</button>
-                            <button class="btn btn-outline-light" type="button">Login</button>
+                        <form class="d-flex" role="Tìm Kiếm">
+                            <input class="form-control me-2" type="Tìm Kiếm" placeholder="Tìm Kiếm" aria-label="Tìm Kiếm" />
+                            <button class="btn btn-outline-light" type="submit">Tìm Kiếm</button>
+                            <button class="btn btn-outline-light" type="button">Đăng nhập</button>
                         </form>
                     </div>
                 </div>
