--- a/cong-nghe.html
+++ b/cong-nghe.html
@@ -38,7 +38,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Danh Mục</a>
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li><a class="dropdown-item" href="the-thao.html">Thể thao</a></li>
