--- a/van-hoa.html
+++ b/van-hoa.html
@@ -105,7 +105,7 @@
                             <li><a href="the-thao.html">Thể thao</a></li>
                             <li><a href="van-hoa.html">Văn hóa</a></li>
                             <li><a href="cong-nghe.html">Công Nghệ</a></li>
-                            <li><a href="giai-tri.html">Giải Trí</a></li>
+                            <li><a href="van-hoa.html">Văn Hoá</a></li>
                         </ul>
                     </div>
                 </div>
